# Cuida

./: .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Justfile  README.md  STACK.md  package-lock.json  package.json  tailwind.config.ts
backend/: Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20260305_0433_add_email_messages_table_3d0043209a90.py  20260305_2329_add_users_magic_link_tokens_sessions_37369d6ae89b.py  20260305_2337_drop_sessions_table_use_redis_67cdf42961a9.py  20260312_2302_initial_models_444051d863b1.py  20260313_0222_adapt_user_model_665756c5e34c.py  20260313_1815_add_org_invitation_tokens_c08f9c548cfa.py  20260314_0000_add_from_name_and_array_to_email_messages_a1b2c3d4e5f6.py  20260315_0107_add_tasks_table_d2c4871884f1.py
backend/app/: factory.py  index.py
backend/app/actions/: base.py  deps.py  enums.py  registry.py  routes.py  schemas.py  state_actions.py  utils.py
backend/app/auth/: README.md  crypto.py  deps.py  guards.py  models.py  queries.py  routes.py  service.py
backend/app/auth/magic_link/: routes.py  services.py
backend/app/base/: mixins.py  models.py  registry.py  routes.py  schemas.py
backend/app/calendar/: enums.py  models.py
backend/app/calls/: README.md
backend/app/comms/: deps.py  enums.py  models.py  tasks.py
backend/app/comms/clients/: email.py
backend/app/comms/models/: emails.py
backend/app/comms/service/: emails.py
backend/app/emails/: README.md  __init__.py  client.py  deps.py  models.py  service.py
backend/app/llm/: README.md  enums.py  models.py
backend/app/orgs/: actions.py  deps.py  enums.py  exceptions.py  queries.py  routes.py  schemas.py  service.py
backend/app/queue/: README.md  config.py  enums.py  exceptions.py  models.py  registry.py  tasks.py  transactions.py  types.py
backend/app/tasks/: enums.py  models.py
backend/app/telephony/: README.md
backend/app/users/: README.md  actions.py  deps.py  enums.py  models.py  queries.py  routes.py  schemas.py  service.py
backend/app/utils/: configure.py  db.py  deps.py  discovery.py  exceptions.py  logging.py  otel.py  providers.py  tracing.py
backend/app/voice/: README.md
backend/emails/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
backend/emails/scripts/: build.ts
backend/emails/templates/: MagicLink.tsx  SignupConfirmation.tsx  components.tsx
backend/scripts/: README.md  generate_erd.py  migrate.py  start-worker.sh  start.sh
backend/templates/emails-react/magic_link/: html.jinja2  text.jinja2
backend/templates/emails-react/org_invitation/: html.jinja2  text.jinja2
backend/templates/emails-react/signup_confirmation/: html.jinja2  text.jinja2
backend/tests/: README.md  conftest.py  test_actions.py  test_health.py
backend/tests/factories/: base.py  users.py
backend/tests/fixtures/: __init__.py  app.py  common.py  database.py
(+92 files in other folders)
